jenkins/k8s/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: helloworld
  namespace: default
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`hello.host.com`)
    kind: Rule
    services:
    - name: helloworld
      port: 8080
